--- a/app/src/main/res/layout/activity_day_schedule.xml
+++ b/app/src/main/res/layout/activity_day_schedule.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin"
             tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="8dp">
+            tools:layout_editor_absoluteX="8dp"
+            style="@style/TitleStyle">
 
             <TextView
                 android:layout_width="match_parent"
@@ -27,6 +28,18 @@
                 android:text="@string/registerSchedule"
                 android:textAlignment="center" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/label"
+                android:text="@string/gmt"
+                style="@style/LabelStyle"/>
         </LinearLayout>
 
         <LinearLayout
@@ -419,12 +432,14 @@
 
                 <Button
                     android:id="@+id/saveDay"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/button_width"
+                    android:layout_height="@dimen/button_height"
                     android:textSize="@dimen/label"
                     android:text="@string/save_day"
                     android:textAlignment="center"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_button_small"
+                    style="@style/ButtonStyle"/>
 
             </LinearLayout>
 
