day and week schedule restyle

--- a/app/src/main/res/layout/activity_appointments.xml
+++ b/app/src/main/res/layout/activity_appointments.xml
@@ -6,23 +6,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.Booking">
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways" />
+            android:layout_height="wrap_content"
+            android:text="@string/appointments"
+            android:textSize="@dimen/title_text"
+            style="@style/TitleStyle"/>
+    </LinearLayout>
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabGravity="fill"
-            app:tabMode="fixed" />
+            app:tabMode="fixed"
+            app:tabIndicatorColor="@color/white"
+            app:tabTextColor="@color/title"
+            app:tabSelectedTextColor="@color/title"/>
 
     </android.support.design.widget.AppBarLayout>
 
