--- a/app/src/main/res/layout/reservation_frame.xml
+++ b/app/src/main/res/layout/reservation_frame.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:textSize="@dimen/label"
             android:text="STUDENT"
-            style="@style/TitleStyle"/>
+            style="@style/LabelStyle"/>
 
         <TextView
             android:id="@+id/nameRes"
@@ -28,7 +28,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="@dimen/label"
-            style="@style/TitleStyle"/>
+            style="@style/LabelStyle"/>
 
     </LinearLayout>
 
@@ -46,7 +46,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="@dimen/label"
-            style="@style/TitleStyle"/>
+            style="@style/LabelStyle"/>
 
         <TextView
             android:id="@+id/hourRes"
@@ -54,7 +54,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="@dimen/label"
-            style="@style/TitleStyle"/>
+            style="@style/LabelStyle"/>
 
         <Button
             android:id="@+id/deleteRes"
