--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,10 @@
         <item name="android:textColorPrimary">@color/green</item>
     </style>
 
-
+    <style name="inputStyle">
+        <item name="android:background">@drawable/costum_edit_text</item>
+        <item name="android:textColor"> @color/white </item>
+        <item name="android:textCursorDrawable"> @color/white </item>
+    </style>
 
 </resources>
