--- a/app/src/main/res/layout/activity_search_coach.xml
+++ b/app/src/main/res/layout/activity_search_coach.xml
@@ -66,9 +66,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:layout_marginRight="@dimen/margin"
-                    android:background="@drawable/not_selected_edit_text"
-                    android:textColor="@color/white"
-                    android:textCursorDrawable="@color/white" />
+                    style="@style/inputStyle" />
 
             </LinearLayout>
 
@@ -259,9 +257,7 @@
                     android:text="0"
                     android:inputType="number"
                     android:layout_marginRight="@dimen/margin"
-                    android:background="@drawable/not_selected_edit_text"
-                    android:textColor="@color/white"
-                    android:textCursorDrawable="@color/white"/>
+                    style="@style/inputStyle"/>
             </LinearLayout>
 
         </LinearLayout>
