--- a/app/src/main/res/layout/activity_search_coach.xml
+++ b/app/src/main/res/layout/activity_search_coach.xml
@@ -6,8 +6,8 @@
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.SignUp">
 
     <ScrollView
-        android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp">
 
