--- a/app/src/main/res/layout/rate_popup.xml
+++ b/app/src/main/res/layout/rate_popup.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
 
     <Button
         android:id="@+id/confirmRating"
         android:layout_width="@dimen/button_small_width"
         android:layout_height="@dimen/button_small_height"
         android:text="@string/rate"
-        android:textSize="@dimen/button_text"/>
+        android:textSize="@dimen/button_text"
+        android:background="@drawable/custom_button_small"
+        style="@style/ButtonStyle"/>
 </LinearLayout>
